# side_note

./: .gitignore  INCIDENT-2026-06-16-release-build-failed.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/: edge-hint.html
scripts/: stop-dev.ps1
src/: App.tsx  ConfirmDialog.tsx  MarkdownSourceEditor.tsx  MdxNoteEditor.tsx  WysiwygEditor.tsx  api.ts  archiveUtils.ts  codemirrorSetup.ts  editorCursor.ts  markdownConvert.ts  mdxLexicalCapturePlugin.ts  mdxSelectionCut.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
