[package]
name = "side-note"
version = "0.1.0"
description = "A dockable desktop sticky note widget."
authors = ["Side Note"]
edition = "2021"

[lib]
name = "side_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "side-note"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
open = "5.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
